attempt to fix DT-2375, Lots of white space when the feature image is hidden.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -192,7 +192,8 @@ select::-ms-expand{
     }
 }
 
-.home-page {
+
+div[data-widget-type="feature"] + .home-page {
     position: absolute;
     top: 100vh;
     @media only screen and (max-width: 1024px) {
